Plugins and tmux resurrect.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1226,3 +1226,10 @@ run -b '[ -z "#{window_active}" ] && [ -z "#{version}" ] && tmux set display-tim
 # }
 #
 # "$@"
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run -b '~/.tmux/plugins/tpm/tpm'
